deck reset when menu button clicked

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div id="categories-menu" class="card-deck">
                 </div>
 
-                <div id="items-deck" class="card-deck">
+                <div id="editor-deck" class="card-deck">
                     <div class="card">
                         <img class="card-img" src="img/face-basic.svg" alt="face-basic">
                     </div>
