colorpicker - покраска каждого элемента
ограниченное кол-во цветов

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8" />
     <script type="text/javascript" src="script.js"></script>
     <script type="text/javascript" src="editor.js"></script>
+    <script type="text/javascript" src="colorpicker.js"></script>
     <script type="text/javascript" src="helpfunctions.js"></script>
     <script type="text/javascript" src="data.js"></script>
-    <!--script type="text/javascript" src="svgloader.js"></script-->
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
