--- a/index.html
+++ b/index.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <script type="text/javascript" src="script.js"></script>
     <script type="text/javascript" src="editor.js"></script>
     <script type="text/javascript" src="colorpicker.js"></script>
     <script type="text/javascript" src="helpfunctions.js"></script>
     <script type="text/javascript" src="data.js"></script>
+    <script type="text/javascript" src="housePack.js"></script>
+    <script type="text/javascript" src="lampPack.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@jaames/iro"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-</head>
+    <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
+    <script type="text/javascript" src="https://canvg.googlecode.com/svn/trunk/rgbcolor.js" ></script>
+    <script type="text/javascript" src="https://canvg.googlecode.com/svn/trunk/StackBlur.js"></script>
+    <script type="text/javascript" src="https://canvg.googlecode.com/svn/trunk/canvg.js" ></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
+  </head>
 
-<body>
-
+  <body>
     <div class="row">
-            <div id="edit-panel" class="column">
+      <div id="edit-panel" class="column">
+        <div id="categories-menu" class="card-deck"></div>
 
-                <div id="categories-menu" class="card-deck">
-                </div>
+        <div id="deck-container">
+          <div id="editor-deck" class="card-deck"></div>
+        </div>
+        <div class="wheel" id="colorWheelDemo"></div>
+      </div>
 
-                <div id="editor-deck" class="card-deck">
-                </div>
-                <div class="wheel" id="colorWheelDemo"></div>
-
-            </div>
-        
-            <div id="portrait-container" class="column">
-                
-            </div>
-
+      <div id="portrait-container" class="column"></div>
+      <div id="side-menu-panel">
+        <div id="top-buttons"></div>
+        <div id="bottom-buttons">
+          <button id="download" class="card-menu">
+            <i class="fa fa-download"></i>
+          </button>
+        </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
